--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,9 @@
                 <a href="{{site.url}}{{site.baseurl}}/#about">
                     <div class="columns">
                         <div class="column is-one-fifth-desktop is-one-fifth-fullhd is-one-quarter-tablet">
-                            <figure class="image is-64x64">
+                            <!-- <figure class="image is-64x64">
                                 <img class="is-rounded" src="{{site.author-image}}">
-                            </figure>
+                            </figure> -->
                         </div>
                         <div class="column is-marginless">
                             <h5 class="has-text-grey-lighter">{{site.author-name}}</h5>
