--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,6 +8,7 @@
                     </figure>
                 </div>
                 <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
+                    <p>{{site.author-title}} </p>
                     <p>{{site.author-about}}</p>
                     <br>
                     <div class="container columns is-centered">
