--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,14 +11,14 @@
                 <a href="{{site.url}}{{site.baseurl}}/#about">
                     <div class="columns">
                         <div class="column is-one-fifth-desktop is-one-fifth-fullhd is-one-quarter-tablet">
-                            <!-- <figure class="image is-64x64">
-                                <img class="is-rounded" src="{{site.author-image}}">
-                            </figure> -->
+                            <figure class="image is-64x64">
+                                <img class="is-rounded" src="{{site.favicon-url}}">
+                            </figure>
                         </div>
                         <div class="column is-marginless">
                             <h5 class="has-text-grey-lighter">{{site.author-name}}</h5>
                             <div class="content has-text-grey">
-                                <p>{{site.author-about | truncate: 75 }}</p>
+                                <p>{{site.author-title | truncate: 75 }}</p>
                             </div>
                         </div>
                     </div>
@@ -26,7 +26,7 @@
             </div>
 
             <!--Link Section-->
-            <div class="column has-text-white">
+            <!-- <div class="column has-text-white">
                 <h3>More Links</h3>
                 {% for sitepage in site.html_pages offset: 4 %}
                 {% unless sitepage.url == '/'  limit: 2 %}
@@ -38,7 +38,7 @@
                 <li>
                     <a target="_blank" href="{{site.url}}{{site.baseurl}}/feed.xml">Subscribe via RSS</a>
                 </li>
-            </div>
+            </div> -->
 
             <!--Blog-post Section-->
             <div class="column has-text-white">
